
:uri-changelog: http://keepachangelog.com/
All notable changes to this project are documented in this file.

The format is based on {uri-changelog}[Keep a Changelog].

== v2.0.0-beta.2 (November 21, 2019)
* Helm upgraded to version 3.0.0 #100
* incubator and jetstack helm repos removed as they can now be searched from helm hub #100
* tiller disabled and option to enable it is removed #100

== v2.0.0-beta.1 (November 14, 2019)
* Added admin host for operations instead of using the bastion server #91
* Installed Python3, oci-cli #91
* Switched from kubeconfig v1 to v2, generated by oci-cli instead of uploading #98
* Switched all operations from bastion to admin host #91
* Use compartment id instead of compartment name for policies #86
* Updated available list of Kubernetes versions in Terraform options #90

== v1.0.0 (September 27,2019)

=== Changes
* changed all variables_ocids to ids
* using Oracle Linux only for bastion now
* updated docs

== v1.0.0-beta.4 (September 24,2019)

=== Improvements

* Added integration with OCI KMS for encrypting K8s secrets
* Added outputs for instance_principal dynamic group, enabled update_dynamic_group.sh
* Updated documentation for KMS
* New module for KMS usage policies

=== Changes
* Set minimum version of Terraform to 0.12.8
* Changes in variable file - removed redundant variables e.g. nodepool_topology, quantity_per_subnet, preferred lb_subnets
* Updated documentation
* terraform.tfvars.example

== v1.0.0-beta.3 (September 16,2019)

=== Improvements

* Networking
** Worker and load balancer subnets now use regional subnets
** Simplified network topology for both multi and single AD regions

=== Changes
* Set minimum version of Terraform to 0.12.8
* Changes in variable file - removed redundant variables e.g. nodepool_topology, quantity_per_subnet, preferred lb_subnets
* Updated documentation
* terraform.tfvars.example

== v1.0.0-beta.2 (September 13,2019)

=== Improvements

* Bastion