@@ -23,7 +23,7 @@ data "oci_identity_compartments" "compartments_id" {
 }
 
 resource "oci_identity_dynamic_group" "admin_instance_principal" {
-  provider       = "oci.home"
+  provider       = oci.home
   compartment_id = var.oci_admin_identity.tenancy_id
   description    = "dynamic group to allow instances to call services for 1 admin"
   matching_rule  = "ALL {instance.id = '${join(",", data.oci_core_instance.admin.*.id)}'}"
@@ -32,7 +32,7 @@ resource "oci_identity_dynamic_group" "admin_instance_principal" {
 }
 
 resource "oci_identity_policy" "admin_instance_principal" {
-  provider       = "oci.home"
+  provider       = oci.home
   compartment_id = var.oci_admin_identity.compartment_id
   description    = "policy to allow admin host to call services"
   name           = "${var.oci_admin_general.label_prefix}-admin_instance_principal"
