@@ -27,7 +27,7 @@ resource null_resource "install_calico" {
     bastion_private_key = file(var.oke_ssh_keys.ssh_private_key_path)
   }
 
-  depends_on = ["null_resource.install_kubectl_admin", "null_resource.write_kubeconfig_on_admin"]
+  depends_on = [null_resource.install_kubectl_admin, null_resource.write_kubeconfig_on_admin]
 
   provisioner "file" {
     content     = data.template_file.install_calico[0].rendered
