@@ -4,50 +4,57 @@
 # Identity and access parameters
 variable "api_fingerprint" {
   description = "fingerprint of oci api private key"
+  type        = string
 }
 
 variable "api_private_key_path" {
   description = "path to oci api private key"
+  type        = string
 }
 
 variable "compartment_id" {
-  type        = "string"
   description = "compartment id"
+  type        = string
 }
 
 variable "tenancy_id" {
-  type        = "string"
   description = "tenancy id"
+  type        = string
 }
 
 variable "user_id" {
-  type        = "string"
   description = "user id"
+  type        = string
 }
 
 # ssh keys
 variable "ssh_private_key_path" {
   description = "path to ssh private key"
+  type        = string
 }
 
 variable "ssh_public_key_path" {
   description = "path to ssh public key"
+  type        = string
 }
 
 # general oci parameters
 variable "disable_auto_retries" {
   default = true
+  type    = bool
 }
 
 variable "label_prefix" {
-  type    = "string"
-  default = "oke"
+  description = "a string that will be prependend to all resources"
+  default     = "oke"
+  type        = string
 }
 
 variable "region" {
   # List of regions: https://docs.cloud.oracle.com/iaas/Content/General/Concepts/regions.htm#ServiceAvailabilityAcrossRegions
   description = "region"
   default     = "us-phoenix-1"
+  type        = string
 }
 
 # networking parameters
@@ -55,12 +62,11 @@ variable "region" {
 variable "nat_gateway_enabled" {
   description = "whether to create a nat gateway"
   default     = true
+  type        = bool
 }
 
 variable "netnum" {
   description = "zero-based index of the subnet when the network is masked with the newbit."
-  type        = "map"
-
   default = {
     admin   = 33
     bastion = 32
@@ -68,104 +74,108 @@ variable "netnum" {
     pub_lb  = 17
     workers = 1
   }
+  type = map
 }
 
 variable "newbits" {
-  type        = "map"
   description = "new mask for the subnet within the virtual network. use as newbits parameter for cidrsubnet function"
-
   default = {
     admin   = 13
     bastion = 13
     lb      = 11
     workers = 2
   }
+  type = map
 }
 
 variable "service_gateway_enabled" {
   description = "whether to create a service gateway"
   default     = true
+  type        = bool
 }
 
 variable "vcn_cidr" {
-  type        = "string"
   description = "cidr block of VCN"
   default     = "10.0.0.0/16"
+  type        = string
 }
 
 variable "vcn_dns_label" {
-  type    = "string"
   default = "oke"
+  type    = string
 }
 
 variable "vcn_name" {
-  type        = "string"
   description = "name of vcn"
   default     = "oke vcn"
+  type        = string
 }
 
 # bastion
 variable "bastion_access" {
   description = "cidr from where the bastion can be sshed into. Default is ANYWHERE and equivalent to 0.0.0.0/0"
   default     = "ANYWHERE"
+  type        = string
 }
 
 variable "bastion_enabled" {
   description = "whether to create a bastion host"
-  type        = bool
   default     = true
+  type        = bool
 }
 
 variable "bastion_image_id" {
   description = "image id to use for bastion."
   default     = "NONE"
+  type        = string
 }
 
 variable "bastion_notification_enabled" {
+  description = "Whether to enable notification on the bastion host"
   default     = true
   type        = bool
-  description = "Whether to enable notification on the bastion host"
 }
 
 variable "bastion_notification_endpoint" {
+  description = "The subscription notification endpoint for the bastion. Email address to be notified."
   default     = ""
   type        = string
-  description = "The subscription notification endpoint for the bastion. Email address to be notified."
 }
 
 variable "bastion_notification_protocol" {
+  description = "The notification protocol used."
   default     = "EMAIL"
   type        = string
-  description = "The notification protocol used."
 }
 
 variable "bastion_notification_topic" {
+  description = "The name of the notification topic."
   default     = "bastion"
   type        = string
-  description = "The name of the notification topic."
 }
 
 variable "bastion_package_upgrade" {
   description = "Whether to upgrade the bastion host packages after provisioning. It’s useful to set this to false during development so the bastion is provisioned faster."
-  type        = bool
   default     = true
+  type        = bool
 }
 
 variable "bastion_shape" {
   description = "shape of bastion instance"
   default     = "VM.Standard.E2.1"
+  type        = string
 }
 
 variable "bastion_timezone" {
+  description = "The preferred timezone for the bastion host."
   default     = "Australia/Sydney"
   type        = string
-  description = "The preferred timezone for the bastion host."
 }
 
 variable "bastion_use_autonomous" {
+  description = "Whether to use Autonomous Linux or an Oracle Linux Platform image or custom image. Set to false if you want to use your own image id or Oracle Linux Platform image."
   default     = true
   type        = bool
-  description = "Whether to use Autonomous Linux or an Oracle Linux Platform image or custom image. Set to false if you want to use your own image id or Oracle Linux Platform image."
 }
 
 # admin server
@@ -173,74 +183,77 @@ variable "bastion_use_autonomous" {
 variable "admin_enabled" {
   description = "whether to create an admin server in a private subnet"
   default     = true
+  type        = bool
 }
 
 variable "admin_image_id" {
   description = "image id to use for admin server."
   default     = "NONE"
+  type        = string
 }
 
 variable "admin_instance_principal" {
   description = "enable the admin server host to call OCI API services without requiring api key"
   default     = true
+  type        = bool
 }
 
 variable "admin_notification_enabled" {
+  description = "Whether to enable notification on the admin host"
   default     = false
   type        = bool
-  description = "Whether to enable notification on the admin host"
 }
 
 variable "admin_notification_endpoint" {
+  description = "The subscription notification endpoint for the admin. Email address to be notified."
   default     = ""
   type        = string
-  description = "The subscription notification endpoint for the admin. Email address to be notified."
 }
 
 variable "admin_notification_protocol" {
+  description = "The notification protocol used."
   default     = "EMAIL"
   type        = string
-  description = "The notification protocol used."
 }
 
 variable "admin_notification_topic" {
+  description = "The name of the notification topic."
   default     = "admin"
   type        = string
-  description = "The name of the notification topic."
 }
 
 variable "admin_package_upgrade" {
   description = "Whether to upgrade the bastion host packages after provisioning. It’s useful to set this to false during development so the bastion is provisioned faster."
-  type        = bool
   default     = true
+  type        = bool
 }
 
 variable "admin_shape" {
   description = "shape of admin server instance"
   default     = "VM.Standard.E2.1"
+  type        = string
 }
 
 variable "admin_timezone" {
   default     = "Australia/Sydney"
-  type        = string
   description = "The preferred timezone for the admin host."
+  type        = string
 }
 
 variable "admin_use_autonomous" {
+  description = "Whether to use Autonomous Linux or an Oracle Linux Platform image or custom image. Set to false if you want to use your own image id or Oracle Linux Platform image."
   default     = true
   type        = bool
-  description = "Whether to use Autonomous Linux or an Oracle Linux Platform image or custom image. Set to false if you want to use your own image id or Oracle Linux Platform image."
 }
 
 # availability domains
 variable "availability_domains" {
   description = "ADs where to provision non-OKE resources"
-  type        = "map"
-
   default = {
     bastion = 1
     admin   = 1
   }
+  type = map
 }
 
 # oke
@@ -248,66 +261,78 @@ variable "availability_domains" {
 variable "allow_node_port_access" {
   description = "whether to allow access to NodePorts when worker nodes are deployed in public mode"
   default     = false
+  type        = bool
 }
 
 variable "allow_worker_ssh_access" {
   description = "whether to allow ssh access to worker nodes when worker nodes are deployed in public mode"
   default     = false
+  type        = bool
 }
 
 variable "cluster_name" {
   description = "name of oke cluster"
   default     = "oke"
+  type        = string
 }
 
 variable "dashboard_enabled" {
   description = "whether to enable kubernetes dashboard"
   default     = true
+  type        = bool
 }
 
 variable "kubernetes_version" {
   description = "version of kubernetes to use"
   default     = "LATEST"
+  type        = string
 }
 
 variable "node_pools" {
+  description = "tuple node pools. each key maps to a node pool. each value is a tuple of shape (string) and size(number)"
   type        = map(any)
-  description = "number of node pools"
 }
 
 variable "node_pool_name_prefix" {
   description = "prefix of node pool name"
   default     = "np"
+  type        = string
 }
 
 variable "node_pool_image_id" {
   description = "OCID of custom image to use for worker node"
   default     = "NONE"
+  type        = string
 }
 
 variable "node_pool_os" {
   description = "name of image to use"
   default     = "Oracle Linux"
+  type        = string
 }
 
 variable "node_pool_os_version" {
   description = "version of image Operating System to use"
   default     = "7.7"
+  type        = string
 }
 
 variable "pods_cidr" {
   description = "This is the CIDR range used for IP addresses by your pods. A /16 CIDR is generally sufficient. This CIDR should not overlap with any subnet range in the VCN (it can also be outside the VCN CIDR range)."
   default     = "10.244.0.0/16"
+  type        = string
 }
 
 variable "services_cidr" {
   description = "This is the CIDR range used by exposed Kubernetes services (ClusterIPs). This CIDR should not overlap with the VCN CIDR range."
   default     = "10.96.0.0/16"
+  type        = string
 }
 
 variable "worker_mode" {
   description = "whether to provision public or private workers"
   default     = "private"
+  type        = string
 }
 
 # oke load balancers
@@ -316,6 +341,7 @@ variable "lb_subnet_type" {
   description = "type of load balancer subnets to create."
   # values: both, internal, public
   default = "public"
+  type    = string
 }
 
 variable "preferred_lb_subnets" {
@@ -323,6 +349,7 @@ variable "preferred_lb_subnets" {
   # values: public, internal. 
   # When creating an internal load balancer, the internal annotation must still be specified regardless 
   default = "public"
+  type    = string
 }
 
 # ocir
@@ -330,18 +357,18 @@ variable "preferred_lb_subnets" {
 variable "create_auth_token" {
   description = "whether to create an auth token to use with OCIR"
   default     = false
+  type        = bool
 }
 
 variable "email_address" {
   description = "email address used for OCIR"
   default     = ""
+  type        = string
 }
 
 variable "ocir_urls" {
   # Region and region codes: https://docs.cloud.oracle.com/iaas/Content/General/Concepts/regions.htm#ServiceAvailabilityAcrossRegions
   description = "urls of ocir"
-  type        = "map"
-
   default = {
     ap-sydney-1    = "syd.ocir.io"
     ap-mumbai-1    = "bom.ocir.io"
@@ -355,43 +382,51 @@ variable "ocir_urls" {
     us-ashburn-1   = "iad.ocir.io"
     us-phoenix-1   = "phx.ocir.io"
   }
+  type = map(string)
 }
 
 variable "tenancy_name" {
   description = "tenancy name"
   default     = ""
+  type        = string
 }
 
 variable "username" {
   description = "username to access OCIR"
   default     = ""
+  type        = string
 }
 
 # helm
 variable "helm_version" {
   description = "version of helm to install"
   default     = "3.0.0"
+  type        = string
 }
 
 variable "install_helm" {
   description = "whether to install helm client on the bastion"
   default     = false
+  type        = bool
 }
 
 # calico
 variable "calico_version" {
   description = "version of calico to install"
   default     = "3.9"
+  type        = string
 }
 
 variable "install_calico" {
   description = "whether to install calico for network pod security policy"
   default     = false
+  type        = bool
 }
 
 variable "install_metricserver" {
   description = "whether to install metricserver for collecting metrics and for HPA"
   default     = false
+  type        = bool
 }
 
 # kms
@@ -399,24 +434,29 @@ variable "install_metricserver" {
 variable "use_encryption" {
   description = "whether to use OCI Key Management to encrypt data"
   default     = false
+  type        = bool
 }
 
 variable "use_existing_vault" {
   description = "whether to use an existing vault to create an encryption key"
   default     = true
+  type        = bool
 }
 
 variable "existing_vault_id" {
   description = "id of existing vault to use to create an encryption key"
   default     = ""
+  type        = string
 }
 
 variable "use_existing_key" {
   description = "whether to use an existing key for encryption"
   default     = false
+  type        = bool
 }
 
 variable "existing_key_id" {
   description = "id of existing key"
   default     = ""
+  type        = string
 }
